Test is commented out for the comments test controller, the code is there just doesn't work also I fixed bug that caused only one user to see the vote buttons on the home screen

--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -11,3 +11,9 @@ two:
   body: MyText
   restaurant: two
   user: two
+
+three:
+  name: MyString
+  body: MyText
+  restaurant: three
+  user: csuser
