--- a/test/fixtures/vote_histories.yml
+++ b/test/fixtures/vote_histories.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: one.id
+  user: one
   restaurant: one
   upvote: true
 
 two:
-  user_id: one.id
+  user: one
   restaurant: one
   upvote: false
