--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,12 +4,12 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {
-	email: csuser@westga.edu
-}
-two: {
-	email: nick@example.com
-}
+one:
+ email: csuser@westga.edu
+
+two: 
+ email: nick@example.com
+
 
 
 
